--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^5.5.2
   firebase_messaging: ^15.2.5
   cloud_firestore: ^5.6.6
+  hexcolor: ^3.0.1
 
 dev_dependencies:
   flutter_test:
